# computer-graphics

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
assets/shaders/: PBR.frag  PBR.vert  Phong.frag  Phong.vert  hdri.frag  hdri.vert  shadows.frag  shadows.vert
include/: Starter.hpp
include/camera/: BoatCamera.hpp  Camera.hpp  FirstPersonCamera.hpp  MeshCamera.hpp
include/lights/: DirectionalLight.hpp  Light.hpp  PointLight.hpp  SpotLight.hpp
include/materials/: BasicMaterial.hpp  Material.hpp  PBRMaterial.hpp  Texture.hpp
include/objects/: Collision.hpp  Mesh.hpp  Object.hpp  Transform.hpp
include/scene/: Menu.hpp  Scene.hpp  TestScene.hpp
include/scene/api/: ApiVulkan.hpp
include/scene/natureScene/: NatureScene.hpp  SplashScreen.hpp
include/scene/natureScene/materials/: BarrelMaterial.hpp  BoatMaterial.hpp  BridgeMaterial.hpp  CarrettoMaterial.hpp  CavernMaterial.hpp  ChurchMaterial.hpp  FabbroMaterial.hpp  FienileMaterial.hpp  GroundMaterial.hpp  GroveMaterial.hpp  HeatMaterial.hpp  HomeMaterial.hpp  House2Material.hpp  House3Material.hpp  MoloMaterial.hpp  MulinoMaterial.hpp  PozzoMaterial.hpp  RockMaterial.hpp  SandMaterial.hpp  TendaMaterial.hpp  TorchMaterial.hpp  TreasureMaterial.hpp  TreeMaterial.hpp  WallMaterial.hpp  WaterMaterial.hpp
include/scene/natureScene/mesh/: Barrel.hpp  Boat.hpp  Bridge.hpp  Carretto.hpp  Cavern.hpp  Chest.hpp  Church.hpp  Fabbro.hpp  Fence.hpp  Fienile.hpp  Fire.hpp  Ground.hpp  Grove.hpp  Heat.hpp  Home.hpp  House2.hpp  House3.hpp  House4.hpp  Island.hpp  Molo.hpp  Mulino.hpp  Pozzo.hpp  Rock.hpp  Tenda.hpp  Terrain.hpp  Torch.hpp  Tree.hpp  Walls.hpp  Water.hpp
include/scene/natureScene/object/: Barrels.hpp  Boat.hpp  Carretto.hpp  CollisionWater.hpp  Fabbro.hpp  Fences.hpp  Fienile.hpp  Fires.hpp  Grounds.hpp  Groves.hpp  Heat.hpp  Homes.hpp  House2.hpp  House3.hpp  House4.hpp  Molo.hpp  Mulino.hpp  Pozzo.hpp  Rocks.hpp  Tenda.hpp  Terrain.hpp  Torch.hpp  Treasure.hpp  Tree.hpp  Walls.hpp
include/shaders/: PBRShader.hpp  PhongShader.hpp  Shader.hpp
include/utilities/: Input.hpp
src/: compute_shadows.cpp  figure.hpp  main.cpp
src/camera/: BoatCamera.cpp  Camera.cpp  FirstPersonCamera.cpp  MeshCamera.cpp
src/objects/: Collision.cpp  Mesh.cpp  Object.cpp
src/scene/: ApiVulkan.cpp  Scene.cpp  TestScene.cpp
src/scene/api/: ApiVulkan.cpp
src/scene/natureScene/: NatureScene.cpp  SplashScreen.cpp
src/utilities/: Input.cpp
